# backend/src/Api/wwwroot/openapi-v1.json
@@ -1767,6 +1767,58 @@
         }
       }
     },
+    "/v1/organizations/{organizationId}/members/search": {
+      "get": {
+        "tags": [
+          "SearchMemberCandidatesEndpoint"
+        ],
+        "operationId": "SearchMemberCandidates",
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "q",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MemberCandidateDto"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/organizations/{organizationId}/members/{userId}": {
       "delete": {
         "tags": [
@@ -3744,6 +3796,40 @@
           }
         }
       },
+      "MemberCandidateDto": {
+        "required": [
+          "userId",
+          "username",
+          "firstName",
+          "lastName",
+          "email"
+        ],
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "username": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "lastName": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "email": {
+            "type": "string"
+          }
+        }
+      },
       "MyProfileResponse": {
         "required": [
           "id",
@@ -5122,6 +5208,9 @@
     },
     {
       "name": "GetOrganizationDetailsEndpoint"
+    },
+    {
+      "name": "SearchMemberCandidatesEndpoint"
     },
     {
       "name": "RemoveMemberEndpoint"
